package homey.logic.parser;

import static homey.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
import static homey.logic.Messages.MESSAGE_UNKNOWN_COMMAND;

import java.util.logging.Logger;
import java.util.regex.Matcher;
import java.util.regex.Pattern;

import homey.commons.core.LogsCenter;
import homey.logic.commands.AddCommand;
import homey.logic.commands.ArchiveCommand;
import homey.logic.commands.ClearCommand;
import homey.logic.commands.Command;
import homey.logic.commands.DeleteCommand;
import homey.logic.commands.EditCommand;
import homey.logic.commands.ExitCommand;
import homey.logic.commands.FindCommand;
import homey.logic.commands.HelpCommand;
import homey.logic.commands.ListCommand;
import homey.logic.commands.RelationCommand;
import homey.logic.commands.RemarkCommand;
import homey.logic.commands.TransactionStageCommand;
import homey.logic.commands.UnarchiveCommand;
import homey.logic.parser.exceptions.ParseException;

/**
 * Parses user input.
 */
public class AddressBookParser {

    /**
     * Used for initial separation of command word and args.
     */
    private static final Pattern BASIC_COMMAND_FORMAT = Pattern.compile("(?<commandWord>\\S+)(?<arguments>.*)");
    private static final Logger logger = LogsCenter.getLogger(AddressBookParser.class);

    /**
     * Parses the help command with an optional topic.
     * Examples:
     * - "help" -> new HelpCommand()
     * - "help add" -> new HelpCommand("add")
     *
     * @param arguments The raw arguments after the "help" keyword.
     * @return a HelpCommand with or without a topic.
     */
    private Command parseHelp(String arguments) {
        String trimmed = arguments.trim();
        if (trimmed.isEmpty()) {
            return new HelpCommand();
        }
        return new HelpCommand(trimmed);
    }

    /**
     * Parses the 'list' family of commands (e.g., "list", "list archive").
     * Normalises whitespace/nulls before delegating to {@link ListCommandParser}.
     */
    private Command parseList(String arguments) throws ParseException {
        final String normalised = (arguments.trim()).strip();
        return new ListCommandParser().parse(normalised);
    }

    /**
     * Parses user input into command for execution.
     *
     * @param userInput full user input string
     * @return the command based on the user input
     * @throws ParseException if the user input does not conform the expected format
     */
    public Command parseCommand(String userInput) throws ParseException {
        final Matcher matcher = BASIC_COMMAND_FORMAT.matcher(userInput.trim());
        if (!matcher.matches()) {
            throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, HelpCommand.MESSAGE_USAGE));
        }

        final String commandWord = matcher.group("commandWord");
        final String arguments = matcher.group("arguments");

        // Note to developers: Change the log level in config.json to enable lower level (i.e., FINE, FINER and lower)
        // log messages such as the one below.
        // Lower level log messages are used sparingly to minimize noise in the code.
        logger.fine("Command word: " + commandWord + "; Arguments: " + arguments);

        switch (commandWord) {

        case AddCommand.COMMAND_WORD:
            return new AddCommandParser().parse(arguments);

        case EditCommand.COMMAND_WORD:
            return new EditCommandParser().parse(arguments);

        case RelationCommand.COMMAND_WORD:
            return new RelationCommandParser().parse(arguments);

        case DeleteCommand.COMMAND_WORD:
            return new DeleteCommandParser().parse(arguments);

        case ClearCommand.COMMAND_WORD:
            return new ClearCommand();

        case FindCommand.COMMAND_WORD:
            return new FindCommandParser().parse(arguments);

        case ListCommand.COMMAND_WORD:
            return parseList(arguments);

        case ExitCommand.COMMAND_WORD:
            return new ExitCommand();

        case HelpCommand.COMMAND_WORD:
            return parseHelp(arguments);

        case TransactionStageCommand.COMMAND_WORD:
            return new TransactionStageCommandParser().parse(arguments);

        case ArchiveCommand.COMMAND_WORD:
            return new ArchiveCommandParser().parse(arguments);

        case UnarchiveCommand.COMMAND_WORD:
            return new UnarchiveCommandParser().parse(arguments);

        case RemarkCommand.COMMAND_WORD:
            return new RemarkCommandParser().parse(arguments);

        default:
            logger.finer("This user input caused a ParseException: " + userInput);
            throw new ParseException(MESSAGE_UNKNOWN_COMMAND);
        }
    }

}
